--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-streamlit==1.27.0
-scikit-learn==1.3.2
-pandas==2.1.1
-numpy==1.26.5
-joblib==1.3.2
-matplotlib==3.8.1
-seaborn==0.12.3
-lime==0.2.2.1
-datasets==2.22.0
+streamlit
+scikit-learn
+pandas
+numpy
+joblib
+matplotlib
+seaborn
+lime
+datasets
+torch
+torchvision
+torchaudio
+transformers
+nltk
